tests/baselines/reference/tsxReactComponentWithDefaultTypeParameter3.errors.txt
tests/cases/conformance/jsx/file.tsx(13,11): error TS2322: Type '{}' is not assignable to type 'Prop'.
  Property 'a' is missing in type '{}'.
tests/cases/conformance/jsx/file.tsx(19,18): error TS2322: Type '"hi"' is not assignable to type 'number'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react');
    
    interface Prop {
        a: number,
        b: string
    }
    
    declare class MyComp<P extends Prop> extends React.Component<P, {}> {
        internalProp: P;
    }
    
    // Error
    let x1 = <MyComp />
              ~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'Prop'.
!!! error TS2322:   Property 'a' is missing in type '{}'.
    
    // OK
    let x = <MyComp a={10} b="hi" />
    
    // Error
    let x2 = <MyComp a="hi"/>
                     ~
!!! error TS2322: Type '"hi"' is not assignable to type 'number'.